...
    }

    return (
        <>
            <View style={style.wrapper}>
                <Pressable
                    testID='calls.current_call_bar'
                    style={style.container}
                    onPress={goToCallScreen}
                >
                    <View style={[!speaker && style.avatarOutline]}>
                        <CallAvatar
                            userModel={sessionsDict[speaker || '']?.userModel}
...
